Frontend: bug fixes: profile card overlaps with matches

--- a/frontend/src/components/ProfileIcon.module.scss
+++ b/frontend/src/components/ProfileIcon.module.scss
@@ -23,6 +23,7 @@
     transition: transform .4s;
 }
 .card {
+    z-index: 100;
     display: flex;
     flex-direction: column;
     position: absolute;
